--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,11 @@
             "TNM\\USSD\\" : "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "TNM\\USSD\\Test\\": "tests"
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
