--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,13 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": "^7.1.3",
+        "laravel/framework": ">=5.8.*",
+        "ext-json": "*",
+        "ext-simplexml": "*",
+        "tnmdev/ussd-simulator": "dev-master"
+    },
     "autoload": {
         "psr-4": {
             "TNM\\USSD\\" : "src/"
