--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^7.1.3",
-        "laravel/framework": ">=5.8.*",
+        "laravel/framework": ">=5.8",
         "ext-json": "*",
         "ext-simplexml": "*",
         "tnmdev/ussd-simulator": "dev-master"
